# reform-mega

./: default.nix  formettes.cabal  reform.cabal
Text/: Formettes.hs
Text/Formettes/: Backend.hs  Blaze.hs  Core.hs  Generalized.hs  HSP.hs  Happstack.hs  Heist.hs  Proof.hs  Result.hs
Text/Formettes/HSP/: Common.hs  String.hs  Text.hs
Text/Reform/: Blaze.hs
Text/Reform/HSP/: Text.hs
docs/: Makefile  tutorial.lhs
examples/: BlazeMain.hs  HSP2Main.hs  HSPMain.hs  HeistMain.hs  SharedForm.hs
examples/heist/: form.tpl
reform-blaze/: default.nix  reform-blaze.cabal  shell.nix
reform-blaze/Text/Reform/Blaze/: Common.hs  String.hs  Text.hs
reform-hamlet/: default.nix  reform-hamlet.cabal
reform-hamlet/Text/Reform/Hamlet/: Common.hs  String.hs  Text.hs
reform-happstack/: default.nix  reform-happstack.cabal  shell.nix
reform-happstack/Text/Reform/: Happstack.hs
reform-heist/Text/Reform/: Heist.hs
reform-hsp/: default.nix  reform-hsp.cabal  shell.nix
reform-hsp/Text/Reform/HSP/: Common.hs  String.hs  Text.hs
