Name:                formettes
Version:             0.1
-- Synopsis:
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Text.Formettes
                       Text.Formettes.Backend
                       Text.Formettes.Blaze
                       Text.Formettes.Core
                       Text.Formettes.Generalized
                       Text.Formettes.Happstack
                       Text.Formettes.Heist
                       Text.Formettes.Proof
                       Text.Formettes.Result
  Build-depends:       base             >= 4 && <5,
                       blaze-html       == 0.4.*,
                       bytestring       == 0.9.*,
                       happstack-server == 7.0.*,
                       mtl              >= 2.0 && < 2.2,
                       text             == 0.11.*,
                       utf8-string      == 0.3.*
