Name:                formettes
Version:             0.1
-- Synopsis:
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw, Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, Jasper Van der Jeugt
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Text.Formettes
                       Text.Formettes.Backend
                       Text.Formettes.Blaze
                       Text.Formettes.Core
                       Text.Formettes.Generalized
                       Text.Formettes.Happstack
                       Text.Formettes.HSP.Common
                       Text.Formettes.HSP.String
                       Text.Formettes.Heist
                       Text.Formettes.Proof
                       Text.Formettes.Result
  Build-depends:       base             >= 4 && <5,
                       blaze-html       == 0.4.*,
                       bytestring       == 0.9.*,
                       containers       == 0.4.*,
                       happstack-server == 7.0.*,
                       hsp              == 0.7.*,
                       mtl              >= 2.0 && < 2.2,
                       text             == 0.11.*,
                       utf8-string      == 0.3.*,
                       xmlhtml          == 0.1.*,
                       heist            == 0.8.*
