Name:                reform-blaze
Version:             0.1
-- Synopsis:            
-- Description:         
Homepage:            http://www.happstack.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:           
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:   Text.Reform.Blaze.Common
                     Text.Reform.Blaze.String
                     Text.Reform.Blaze.Text

  Build-depends:     base         >4 && <5,
                     blaze-markup == 0.5.*,
                     blaze-html   == 0.5.*,
                     reform       == 0.1.*,
                     text         == 0.11.*
